--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@
     overflow-wrap: break-word;
 }
 
+.modal-header{
+    display: grid;
+    padding: 10px 0;
+    justify-content: right;
+}
+
 .playlist{
     margin: 5px;
 }
@@ -18,5 +24,12 @@
     margin: 10px;
     padding: 50px;
     border: black 2px solid;
-    text-align: center;
+    text-align: justify;
+    cursor: pointer;
+    overflow-wrap: anywhere;
+}
+
+.card:hover{
+    background-color: rgb(46, 47, 104);
+    color: white;
 }
